--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "express": "^4.21.1",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1"
   },
